[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/PNG/Backgrounds/colored_land.png" type="Texture" id=3]
[ext_resource path="res://Assets/Coming-Home.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_size = 4
outline_color = Color( 0.380392, 0.380392, 0.380392, 1 )
extra_spacing_top = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 4
outline_color = Color( 0.380392, 0.380392, 0.380392, 1 )
extra_spacing_top = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 4
outline_color = Color( 0.380392, 0.380392, 0.380392, 1 )
extra_spacing_top = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 330.179, 122.23 )
texture = ExtResource( 3 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 398.438, 117.468 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -250.0
margin_right = 96.0
margin_bottom = -300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 218.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"
flat = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 56.0
margin_right = 218.0
margin_bottom = 60.0

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 218.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"
flat = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 120.0
margin_right = 218.0
margin_bottom = 124.0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 218.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"
flat = true

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
